fix:layout issue recycle DESREPO-1228

--- a/Frontend/src/app/modules/node-list/node-list.component.scss
+++ b/Frontend/src/app/modules/node-list/node-list.component.scss
@@ -16,7 +16,7 @@
   top: 20px;
   position: fixed;
   right: 0px;
-  z-index:113;
+  z-index:97;
 }
 .searchWorkspace{
   display:none;
